force-app/main/default/objects/Contact/fields/Aadhar_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Card_Number__c</fullName>
    <label>Aadhar Card Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>