force-app/main/default/objects/Contact/fields/Academic_Program__c.field-meta.xml
<CustomField>
    <fullName>Academic_Program__c</fullName>
    <formula>IF( Record_Type_Name__c = &apos;Parent&apos;, ReportsTo.Primary_Academic_Program__r.Name,Primary_Academic_Program__r.Name)</formula>
    <label>Academic Program</label>
    <type>Text</type>
</CustomField>