force-app/main/default/objects/Contact/fields/Active_Batch__c.field-meta.xml
<CustomField>
    <fullName>Active_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Batch</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>hed__Term__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Batches</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Contacts (Batch)</relationshipLabel>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>