force-app/main/default/objects/Contact/fields/Active_Semester__c.field-meta.xml
<CustomField>
    <fullName>Active_Semester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Semester</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>hed__Term__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Semester</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>