force-app/main/default/objects/Contact/fields/Actual_Caste_Category__c.field-meta.xml
<CustomField>
    <fullName>Actual_Caste_Category__c</fullName>
    <formula>IF(ISPICKVAL(Caste_Category__c,&apos;OBC - 1A&apos;) &amp;&amp; TEXT(Admission_Mode__c) &lt;&gt; NULL, &apos;CAT - 1&apos;, 
			IF(ISPICKVAL(Caste_Category__c,&apos;OBC - 1B&apos;)&amp;&amp; TEXT(Admission_Mode__c) &lt;&gt; NULL, &apos;CAT - 1&apos;,
			IF(ISPICKVAL(Caste_Category__c,&apos;OBC - 2A&apos;), &apos;2A&apos;,
			IF(ISPICKVAL(Caste_Category__c,&apos;OBC - 2B&apos;), &apos;2B&apos;,
			IF(ISPICKVAL(Caste_Category__c,&apos;OBC - 3A&apos;), &apos;3A&apos;,
			IF(ISPICKVAL(Caste_Category__c,&apos;OBC - 3B&apos;), &apos;3B&apos;, TEXT(Caste_Category__c)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Caste Category</label>
    <type>Text</type>
</CustomField>