force-app/main/default/objects/Contact/fields/Admission_Mode__c.field-meta.xml
<CustomField>
    <fullName>Admission_Mode__c</fullName>
    <label>Admission Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CET</fullName>
            </value>
            <value>
                <fullName>ComedK</fullName>
            </value>
            <value>
                <fullName>DCET</fullName>
            </value>
            <value>
                <fullName>KEA</fullName>
            </value>
            <value>
                <fullName>PGCET</fullName>
            </value>
            <value>
                <fullName>UQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>