force-app/main/default/objects/Contact/fields/Admission_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Admission_Order_Date__c</fullName>
    <label>Admission Order Date</label>
    <type>Date</type>
</CustomField>