force-app/main/default/objects/Contact/fields/Admission_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Admission_Order_No__c</fullName>
    <label>Admission Order No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>