force-app/main/default/objects/Contact/fields/Admission_Type__c.field-meta.xml
<CustomField>
    <fullName>Admission_Type__c</fullName>
    <label>Admission Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>