force-app/main/default/objects/Contact/fields/Alloted_Caste_Category__c.field-meta.xml
<CustomField>
    <fullName>Alloted_Caste_Category__c</fullName>
    <label>Alloted Caste Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>ST</fullName>
            </value>
            <value>
                <fullName>Cat-1</fullName>
            </value>
            <value>
                <fullName>OBC - 2A</fullName>
            </value>
            <value>
                <fullName>OBC - 2B</fullName>
            </value>
            <value>
                <fullName>OBC - 3A</fullName>
            </value>
            <value>
                <fullName>OBC - 3B</fullName>
            </value>
            <value>
                <fullName>OBC</fullName>
            </value>
            <value>
                <fullName>OC</fullName>
            </value>
            <value>
                <fullName>General Merit</fullName>
            </value>
            <value>
                <fullName>BC</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>OBC - 1A</fullName>
            </value>
            <value>
                <fullName>OBC - 1B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>