force-app/main/default/objects/Contact/fields/Alternate_Mobile_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Mobile_Number_2__c</fullName>
    <label>Alternate Mobile Number 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>