force-app/main/default/objects/Contact/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amount Paid?</label>
    <type>Checkbox</type>
</CustomField>