force-app/main/default/objects/Contact/fields/Anti_Ragging_undertaking_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Anti_Ragging_undertaking_Reference_No__c</fullName>
    <label>Anti Ragging undertaking Reference No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>