force-app/main/default/objects/Contact/fields/Any_Sibling_Studying_in_REVA_University__c.field-meta.xml
<CustomField>
    <fullName>Any_Sibling_Studying_in_REVA_University__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any Sibling Studying in REVA University?</label>
    <type>Checkbox</type>
</CustomField>