force-app/main/default/objects/Contact/fields/Application_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Application_Fee_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if an Applicant has paid for the Applicant</description>
    <inlineHelpText>True, if Applicant has successfully paid for the application</inlineHelpText>
    <label>Application Fee Paid</label>
    <type>Checkbox</type>
</CustomField>