force-app/main/default/objects/Contact/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <description>Applicant Number reference for Application Process</description>
    <inlineHelpText>Reference Number for Application Process</inlineHelpText>
    <label>Application Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>