force-app/main/default/objects/Contact/fields/Applying_For_REVA_PET__c.field-meta.xml
<CustomField>
    <fullName>Applying_For_REVA_PET__c</fullName>
    <label>Applying For REVA PET?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>