force-app/main/default/objects/Contact/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the record is assigned to counselor mark it as True</description>
    <inlineHelpText>Assigned to the counselor</inlineHelpText>
    <label>Assigned</label>
    <type>Checkbox</type>
</CustomField>