force-app/main/default/objects/Contact/fields/Assigned_Users__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Users__c</fullName>
    <description>Who are the previous owners assigned to this record  Data - (store IDs separated by commas)</description>
    <inlineHelpText>A list of previously assigned Owners.</inlineHelpText>
    <label>Assigned Users</label>
    <type>TextArea</type>
</CustomField>