force-app/main/default/objects/Contact/fields/Attendance_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attendance Blocked</label>
    <type>Checkbox</type>
</CustomField>