force-app/main/default/objects/Contact/fields/Backlog__c.field-meta.xml
<CustomField>
    <fullName>Backlog__c</fullName>
    <label>Backlog</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>