force-app/main/default/objects/Contact/fields/Bank_Beneficiary_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Beneficiary_Name__c</fullName>
    <label>Bank Beneficiary Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>