force-app/main/default/objects/Contact/fields/Birthday_Is_Today__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Is_Today__c</fullName>
    <description>checking that birthdate is equals to today or not</description>
    <formula>IF(AND(MONTH(Birthdate) = MONTH(TODAY()), DAY(Birthdate) = DAY(TODAY())), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday Is Today</label>
    <type>Checkbox</type>
</CustomField>