force-app/main/default/objects/Contact/fields/Board__c.field-meta.xml
<CustomField>
    <fullName>Board__c</fullName>
    <label>Board</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AKTU UP</fullName>
            </value>
            <value>
                <fullName>Aligarh Muslim University</fullName>
            </value>
            <value>
                <fullName>Andhra Pradesh Board Of Intermediate Education</fullName>
            </value>
            <value>
                <fullName>Andhra Pradesh Board Of Secondary Education</fullName>
            </value>
            <value>
                <fullName>Assam Board Of Secondary Education</fullName>
            </value>
            <value>
                <fullName>Assam Higher Secondary Education Council</fullName>
            </value>
            <value>
                <fullName>Banasthali Vidyapith</fullName>
            </value>
            <value>
                <fullName>Bihar Intermediate Education Council</fullName>
            </value>
            <value>
                <fullName>Bihar School Examination Board</fullName>
            </value>
            <value>
                <fullName>Board of Technical Education</fullName>
            </value>
            <value>
                <fullName>Board of Vocational Higher Secondary Education</fullName>
            </value>
            <value>
                <fullName>Cambridge University</fullName>
            </value>
            <value>
                <fullName>Central Board Of Secondary Education (CBSE)</fullName>
            </value>
            <value>
                <fullName>Chhatisgarh Board Of Secondary Education</fullName>
            </value>
            <value>
                <fullName>Council Of Indian School Certificate Examination (CISCE/ICSE)</fullName>
            </value>
            <value>
                <fullName>Dayalbagh Educational Institute</fullName>
            </value>
            <value>
                <fullName>Directorate Of Army Education</fullName>
            </value>
            <value>
                <fullName>Goa Board Of Secondary And Higher Secondary Education</fullName>
            </value>
            <value>
                <fullName>Gujarat Secondary And Higher Secondary Education Board</fullName>
            </value>
            <value>
                <fullName>Haryana Board Of Education</fullName>
            </value>
            <value>
                <fullName>Himachal Pradesh Board Of School Education</fullName>
            </value>
            <value>
                <fullName>IGSE Board</fullName>
            </value>
            <value>
                <fullName>International Baccalaureate</fullName>
            </value>
            <value>
                <fullName>J And K State Board Of School Education</fullName>
            </value>
            <value>
                <fullName>Jharkhand Academic Council</fullName>
            </value>
            <value>
                <fullName>Karnataka Board Of The Pre-University Education</fullName>
            </value>
            <value>
                <fullName>Karnataka Secondary Education Examination Board</fullName>
            </value>
            <value>
                <fullName>Kerala Board Of Higher Secondary Education</fullName>
            </value>
            <value>
                <fullName>Kerala Board of Public Examinations</fullName>
            </value>
            <value>
                <fullName>Kerala Secondary Education Examination Board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>