force-app/main/default/objects/Contact/fields/Caste__c.field-meta.xml
<CustomField>
    <fullName>Caste__c</fullName>
    <label>Caste</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Achari</fullName>
            </value>
            <value>
                <fullName>Adaviyar</fullName>
            </value>
            <value>
                <fullName>Adi Dravida</fullName>
                <label>ADI DRAVIDA</label>
            </value>
            <value>
                <fullName>Adi Karnataka</fullName>
                <label>ADI KARNATAKA</label>
            </value>
            <value>
                <fullName>Agamudi</fullName>
                <label>AGAMUDI</label>
            </value>
            <value>
                <fullName>Agasa</fullName>
            </value>
            <value>
                <fullName>Agri</fullName>
            </value>
            <value>
                <fullName>Ahirwar</fullName>
            </value>
            <value>
                <fullName>Ahluwalia</fullName>
            </value>
            <value>
                <fullName>Akkasale</fullName>
            </value>
            <value>
                <fullName>Ambiga</fullName>
                <label>AMBIGA</label>
            </value>
            <value>
                <fullName>Anjana Chaudhari</fullName>
            </value>
            <value>
                <fullName>Arora</fullName>
            </value>
            <value>
                <fullName>Arya Maratha</fullName>
            </value>
            <value>
                <fullName>Asati</fullName>
            </value>
            <value>
                <fullName>Badiger</fullName>
            </value>
            <value>
                <fullName>Bagali</fullName>
            </value>
            <value>
                <fullName>Balija</fullName>
            </value>
            <value>
                <fullName>Ballala</fullName>
            </value>
            <value>
                <fullName>Balmiki</fullName>
            </value>
            <value>
                <fullName>Banai (sub-tribe)</fullName>
            </value>
            <value>
                <fullName>Banaphar</fullName>
            </value>
            <value>
                <fullName>Bandhmati</fullName>
            </value>
            <value>
                <fullName>Banjara</fullName>
            </value>
            <value>
                <fullName>Barai</fullName>
            </value>
            <value>
                <fullName>Baranwal</fullName>
            </value>
            <value>
                <fullName>Barika</fullName>
            </value>
            <value>
                <fullName>Barwar</fullName>
            </value>
            <value>
                <fullName>Beda</fullName>
            </value>
            <value>
                <fullName>Beda Jangam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>