force-app/main/default/objects/Contact/fields/Caste_Category__c.field-meta.xml
<CustomField>
    <fullName>Caste_Category__c</fullName>
    <label>Caste Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>ST</fullName>
            </value>
            <value>
                <fullName>2A</fullName>
                <label>OBC - 2A</label>
            </value>
            <value>
                <fullName>2B</fullName>
                <label>OBC - 2B</label>
            </value>
            <value>
                <fullName>3A</fullName>
                <label>OBC - 3A</label>
            </value>
            <value>
                <fullName>3B</fullName>
                <label>OBC - 3B</label>
            </value>
            <value>
                <fullName>OBC</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
            </value>
            <value>
                <fullName>OBC - 1A</fullName>
            </value>
            <value>
                <fullName>OBC - 1B</fullName>
            </value>
            <value>
                <fullName>BC</fullName>
                <isActive>false</isActive>
                <label>BC</label>
            </value>
            <value>
                <fullName>Cat-1</fullName>
                <isActive>false</isActive>
                <label>Cat-1</label>
            </value>
            <value>
                <fullName>OC</fullName>
                <isActive>false</isActive>
                <label>OC</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>