force-app/main/default/objects/Contact/fields/Caste_Logisys__c.field-meta.xml
<CustomField>
    <fullName>Caste_Logisys__c</fullName>
    <formula>CASE(TEXT(Caste_Category__c),&apos;2A&apos;,&apos;2A&apos;,
&apos;General Merit&apos;,&apos;GM&apos;,
	&apos;SC&apos;,&apos;SC&apos;,
	&apos;ST&apos;,&apos;ST&apos;,
	&apos;2B&apos;,&apos;2B&apos;,
	&apos;3A&apos;,&apos;3A&apos;,
	&apos;3B&apos;,&apos;3B&apos;,
	&apos;Cat-1&apos;,&apos;CAT-1&apos;,
	&apos;Others&apos;,&apos;Others&apos;,
	&apos;BC&apos;,&apos;Others&apos;,
	&apos;OBC&apos;,&apos;Others&apos;,
	&apos;OC&apos;,&apos;Others&apos;,
		&apos;&apos;
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caste Logisys</label>
    <type>Text</type>
</CustomField>