force-app/main/default/objects/Contact/fields/CET_COMEDK_Number__c.field-meta.xml
<CustomField>
    <fullName>CET_COMEDK_Number__c</fullName>
    <label>CET / COMEDK Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>