force-app/main/default/objects/Contact/fields/CET_COMEDK_Rank__c.field-meta.xml
<CustomField>
    <fullName>CET_COMEDK_Rank__c</fullName>
    <label>CET / COMEDK Rank</label>
    <length>50</length>
    <type>Text</type>
</CustomField>