force-app/main/default/objects/Contact/fields/Check_OwnerChnage__c.field-meta.xml
<CustomField>
    <fullName>Check_OwnerChnage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check OwnerChnage</label>
    <type>Checkbox</type>
</CustomField>