force-app/main/default/objects/Contact/fields/Checking_Eligibility_for_Exam__c.field-meta.xml
<CustomField>
    <fullName>Checking_Eligibility_for_Exam__c</fullName>
    <description>using for Semester and IA exam eligibility, it will run 2 days before the exam date and modify picklist value as per their fee dues and attendance percentage</description>
    <label>Checking Eligibility for Exam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>InEligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>