force-app/main/default/objects/Contact/fields/City_Others__c.field-meta.xml
<CustomField>
    <fullName>City_Others__c</fullName>
    <label>City (Others)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>