force-app/main/default/objects/Contact/fields/City_Remarks__c.field-meta.xml
<CustomField>
    <fullName>City_Remarks__c</fullName>
    <label>City Remarks</label>
    <length>150</length>
    <type>Text</type>
</CustomField>