force-app/main/default/objects/Contact/fields/City_Type__c.field-meta.xml
<CustomField>
    <fullName>City_Type__c</fullName>
    <label>City Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Urban</fullName>
            </value>
            <value>
                <fullName>Rural</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>