force-app/main/default/objects/Contact/fields/Coaching_required_from_REVA_University__c.field-meta.xml
<CustomField>
    <fullName>Coaching_required_from_REVA_University__c</fullName>
    <label>Coaching required from REVA University?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>